# ha-solar-savings

./: LICENSE  README.md  Specifications.txt  hacs.json  pyproject.toml
custom_components/solar_savings/: __init__.py  calculator.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/solar_savings/translations/: en.json
tests/: conftest.py  test_calculator.py  test_config_flow.py  test_init.py
