[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-solar-savings"
version = "0.1.0"
description = "Home Assistant custom integration for solar self-consumption savings and dynamic export revenue accounting"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11.0",
  "mypy>=1.15.0",
  "homeassistant>=2026.4.0",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=custom_components.solar_savings --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "D203",
  "D213",
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
mypy_path = "."
packages = ["custom_components.solar_savings"]
